--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Resume-LanLu</title>
+    <link rel="stylesheet" type="text/css" href="web.css"/>
+    <script type="text/javascript" src="web.js"></script>
+</head>
+<body marginheight="20px" marginwidth="80px">
 
+<div id="photo">
+    <img src="photo2.jpg">
+</div>
+
+<div id="lanlu">
+    <h2>Lan Lu</h2>
+    <p>
+    Senior Undergraduate<br>
+    Computer Science Department<br>
+    Southern University of Science and Technology<br>
+    Email: loulankxh@gmail.com<br>
+    Phone: (+86) 18175973145
+    </p>
+</div>
+
+<div id="research">
+    <h2>Research Interests</h2>
+    <p>
+    Similarity Search
+    </p>
+</div>
+
+<div id="intro">
+    <p>
+        Hi, I am a senior undergraduate student majoring in computer science at
+        Southern University of Science and Technology.
+    </p>
+    <p>
+        Besides, I am now a member of SUSTech DBgroup supervised by professor Bo Tang.
+    </p>
+    <p>
+        My research interests mainly falls on Similarity Search
+    </p>
+</div>
+</body>
+</html>
