--- a/index.html
+++ b/index.html
@@ -2,31 +2,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Resume-LanLu</title>
+    <title>Lan Lu</title>
     <link rel="stylesheet" type="text/css" href="web.css"/>
     <script type="text/javascript" src="web.js"></script>
 </head>
-<body marginheight="20px" marginwidth="80px">
+<body id="page">
+
+<div id="top">
+    <p>
+        <h1>Personal Introduction of Lan Lu</h1>
+    </p>
+</div>
 
 <div id="photo">
     <img src="photo2.jpg">
 </div>
 
 <div id="lanlu">
-    <h2>Lan Lu</h2>
+    <h2>Lan Lu(Serena)</h2>
     <p>
     Senior Undergraduate<br>
     Computer Science Department<br>
     Southern University of Science and Technology<br>
     Email: loulankxh@gmail.com<br>
-    Phone: (+86) 18175973145
+    Phone: (+86) 18175973145<br>
+        <a href="https://github.com/loulankxh">GitHub: loulankxh</a>
     </p>
 </div>
 
 <div id="research">
     <h2>Research Interests</h2>
     <p>
-    Similarity Search
+        <ul type="disc">
+            <li>Similarity Search</li>
+            <li>Similarity Graphs</li>
+            <li>CPU-GPU Hybrid System</li>
+        </ul>
     </p>
 </div>
 
@@ -39,8 +50,32 @@
         Besides, I am now a member of SUSTech DBgroup supervised by professor Bo Tang.
     </p>
     <p>
-        My research interests mainly falls on Similarity Search
+        My research interests mainly falls on Similarity Search, especially KNN and ANN for large-scale datasets. Within
+        this topic, technologies like vector quantization, local sensitive hashing, graphs for similarity search and
+        CPU-GPU Hybrid System are included.
+    </p>
+    <p>
+        Recently, I have submitted a paper to SIGIR 2021 on accelerating maximum inner product search with GPU under
+        the guidance of Prof.Bo Tang and Prof.Xiao Yan.
     </p>
 </div>
+
+<div id="education">
+    <h2>Education</h2>
+    <a href="https://www.sustech.edu.cn/en/"><h3>Southern University of Science and Technology</h3></a>
+    GPA: 3.91/4.00, Ranking: 1/138<br>
+    Sept.2018 - Present<br>
+    shenzhen, China
+</div>
+
+<div id="interests">
+    <h2>Other Interests</h2>
+    <p>
+        I have been practicing for the saxophone and Chinese guzhen for many years.<br>
+        I learned painting for a few years.<br>
+        I am a big movie fan.<br>
+    </p>
+</div>
+
 </body>
 </html>
